<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_play_online"
            android:icon="@drawable/play_online"
            android:title="@string/play_online" />
        <item
            android:id="@+id/nav_play_offline"
            android:icon="@drawable/play_offline"
            android:title="@string/play_offline" />


    <item android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/nav_profile_page"
                android:icon="@drawable/profile_page_icon"
                android:title="@string/your_profile"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>
        </menu>
    </item>

    </group>
</menu>