<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfflineGameFragment"
    android:background="@color/timerBackgroundColor"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/playerDataBackground"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Special Game Types:"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/small_checkers_explenation"
                android:textSize="15sp"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/big_checkers_explenation"
                android:textSize="15sp"
                android:layout_margin="8dp"/>

            <Spinner
                android:id="@+id/spnGameTypeSelector"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/timerBackgroundColor"
                android:entries="@array/game_types"
                android:spinnerMode="dropdown"
                android:layout_margin="10dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:id="@+id/quickMatch"
        app:cardCornerRadius="5dp"
        android:layout_margin="3dp"
        android:background="@color/playerDataBackground">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/playerDataBackground">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/board1"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quick Match"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_game"
                    android:textSize="11sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:id="@+id/playAginstCpu"
        app:cardCornerRadius="5dp"
        android:layout_margin="3dp"
        android:background="@color/playerDataBackground">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/playerDataBackground">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/board1"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_against_cpu"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:id="@+id/analysys"
        app:cardCornerRadius="5dp"
        android:layout_margin="3dp"
        android:background="@color/playerDataBackground">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/playerDataBackground">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/board1"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analyze_past_games"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</LinearLayout>

